--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,7 @@
   "rules": {
     "react/jsx-uses-react": "off",
     "react/react-in-jsx-scope": "off",
-    "quotes": ["error","double"]
+    // "quotes": ["error","double"]
     // "singleQuote": false
   }
 }
