--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@tarojs/runtime": "3.6.4",
     "@tarojs/shared": "3.6.4",
     "@tarojs/taro": "3.6.4",
+    "dayjs": "^1.11.7",
     "react": "^17.00.00",
     "react-dom": "^17.00.00",
     "taro-ui": "3.1.0-beta.4"
@@ -60,6 +61,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "postcss": "^8.4.18",
     "prettier": "^2.8.7",
+    "prettier-plugin-organize-imports": "^3.2.2",
     "react-refresh": "^0.11.0",
     "stylelint": "^14.4.0",
     "typescript": "^4.1.0",
