--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "css": "less"
   },
   "scripts": {
-    "build:weapp": "taro build --type weapp",
+    "build:weapp": "cross-env NODE_ENV=production taro build --type weapp",
     "build:rn": "taro build --type rn",
     "dev:weapp": "npm run build:weapp -- --watch",
     "dev:rn": "npm run build:rn -- --watch",
@@ -52,6 +52,7 @@
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
     "babel-preset-taro": "3.6.4",
+    "cross-env": "^7.0.3",
     "eslint": "^8.12.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-taro": "3.6.4",
