--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,6 @@
     "react/jsx-uses-react": "off",
     "react/react-in-jsx-scope": "off",
     // "quotes": ["error","double"]
-    // "singleQuote": false
+    "singleQuote": false
   }
 }
